...adding get_assignments route for student
