# controllers/_student.js
@@ -203,6 +203,44 @@ let getReminders = (req, res) => {
     });
   }
 };
+//Get all assignments for a class
+let getAssignments = (req, res) => {
+  console.log("Student : Getting all assignments...");
+  //Expects classid
+  if (!req.params.id) {
+    res.send({
+      err: "Missing a parameter, expects classid",
+    });
+    console.log("Missing parameter..."); //dev
+  } else {
+    let p = req.params.id;
+    let q = `select * from assignments \
+    where assignments.classid = ${p};`;
+    let ms_req = new sql.Request();
+    ms_req.query(q, (err, data) => {
+      if (err) {
+        console.log(err); //dev
+        return res.status(500).send({
+          success: false,
+          message: "An error occured",
+          error: err.message,
+        });
+      } else {
+        if (data.recordset.len === 0) {
+          return res.status(400).send({
+            success: false,
+            message: "Assignments not found",
+          });
+        } else {
+          return res.status(200).send({
+            success: true,
+            data: data.recordset,
+          });
+        }
+      }
+    });
+  }
+};
 //Student assignment submission
 let newSubmission = (req, res) => {
   console.log("Student : creating new submission..."); //dev
@@ -280,5 +318,6 @@ module.exports = {
   getClasses: getClasses,
   getCourseMaterials: getCourseMaterials,
   getReminders: getReminders,
+  getAssignments: getAssignments,
   newSubmission: newSubmission,
 };
