# swagger.yaml
@@ -445,7 +445,7 @@ paths:
       responses:
         "405":
           description: "Invalid input"
-  
+
   /student/get_materials/{id}:
     get:
       tags:
@@ -461,6 +461,76 @@ paths:
           required: true
           type: "integer"
           format: "int64"
+      responses:
+        "405":
+          description: "Invalid input"
+
+  /student/get_reminders/{id}:
+    get:
+      tags:
+        - "Student"
+      summary: "Gets all reminders for student..."
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "StudentID of (reminder)records to return..."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "405":
+          description: "Invalid input"
+
+  /student/get_assignments/{id}:
+    get:
+      tags:
+        - "Student"
+      summary: "Gets all assignments for student from a single class..."
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ClassID of (assignment)records to return..."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "405":
+          description: "Invalid input"
+
+  /student/new_submission:
+    post:
+      tags:
+        - "Student"
+      summary: "Post an assignment submission..."
+      description: "If you wish to send in an object, the set file:falseand use obj property, otherwise for file upload set file:true"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Object required for route..."
+          required: true
+          schema:
+            type: "object"
+            properties:
+              studentid:
+                type: "integer"
+              teacherid:
+                type: "integer"
+              schoolid:
+                type: "integer"
+              classid:
+                type: "integer"
+              file:
+                type: "boolean"
       responses:
         "405":
           description: "Invalid input"
@@ -552,7 +622,7 @@ paths:
           format: "int64"
       responses:
         "405":
-          description: "Invalid input" 
+          description: "Invalid input"
 
   /schooladmin/update_teacher:
     put:
@@ -584,5 +654,4 @@ paths:
                 type: "date"
       responses:
         "405":
-          description: "Invalid input"       
-
+          description: "Invalid input"
